[gd_scene load_steps=12 format=3 uid="uid://dvfucxmelmr6n"]

[ext_resource type="Script" path="res://game/level/level.gd" id="1_heqh7"]
[ext_resource type="PackedScene" uid="uid://crc6cii8gghvf" path="res://game/level/player.tscn" id="2_d05fk"]
[ext_resource type="Texture2D" uid="uid://npt6x21yjwgi" path="res://assets/back.png" id="2_m2gw2"]
[ext_resource type="PackedScene" uid="uid://dpwjgy8mnexw3" path="res://game/level/oponent.tscn" id="3_qeatc"]
[ext_resource type="Script" path="res://game/level/oponent.gd" id="4_gukfo"]
[ext_resource type="PackedScene" uid="uid://ktpx0viwrwoi" path="res://game/level/ball.tscn" id="5_8bfwp"]
[ext_resource type="Script" path="res://game/level/ball.gd" id="6_av5gp"]
[ext_resource type="Texture2D" uid="uid://71ts0t6fh663" path="res://assets/Fruit+.png" id="8_4oqgf"]

[sub_resource type="LabelSettings" id="LabelSettings_24hai"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tsme"]
size = Vector2(1297, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbgxt"]
size = Vector2(1, 720)

[node name="Level" type="Node"]
script = ExtResource("1_heqh7")

[node name="ColorRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m2gw2")

[node name="PlayerScore" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 157.0
offset_top = 32.0
offset_right = 336.0
offset_bottom = 190.0
grow_horizontal = 2
size_flags_horizontal = 0
text = "ashdajshd"
label_settings = SubResource("LabelSettings_24hai")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OponentScore" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.0
offset_top = 30.0
offset_right = -135.0
offset_bottom = 188.0
grow_horizontal = 2
size_flags_horizontal = 0
text = "ashdajshd"
label_settings = SubResource("LabelSettings_24hai")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." instance=ExtResource("2_d05fk")]
position = Vector2(50, 360)

[node name="Oponent" parent="." instance=ExtResource("3_qeatc")]
position = Vector2(1230, 360)
script = ExtResource("4_gukfo")

[node name="Ball" parent="." instance=ExtResource("5_8bfwp")]
position = Vector2(640, 360)
script = ExtResource("6_av5gp")

[node name="WallUp" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallUp"]
position = Vector2(639, -10)
shape = SubResource("RectangleShape2D_4tsme")

[node name="WallDown" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WallDown"]
position = Vector2(640, 730)
shape = SubResource("RectangleShape2D_4tsme")

[node name="Left" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(0, 360)
shape = SubResource("RectangleShape2D_dbgxt")

[node name="Right" type="Area2D" parent="."]
position = Vector2(1280, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(0, 360)
shape = SubResource("RectangleShape2D_dbgxt")

[node name="ButtonApple" type="Button" parent="."]
offset_left = 543.0
offset_top = 92.0
offset_right = 583.0
offset_bottom = 132.0

[node name="Sprite2D" type="Sprite2D" parent="ButtonApple"]
texture_filter = 1
position = Vector2(19.6875, 20)
scale = Vector2(2.575, 2.5)
texture = ExtResource("8_4oqgf")
hframes = 39
vframes = 6

[node name="ButtonGreenApple" type="Button" parent="."]
offset_left = 609.0
offset_top = 93.0
offset_right = 649.0
offset_bottom = 133.0

[node name="Sprite2D" type="Sprite2D" parent="ButtonGreenApple"]
texture_filter = 1
position = Vector2(19.6875, 20)
scale = Vector2(2.575, 2.5)
texture = ExtResource("8_4oqgf")
hframes = 39
vframes = 6
frame = 1

[node name="ButtonBanana" type="Button" parent="."]
offset_left = 679.0
offset_top = 94.0
offset_right = 719.0
offset_bottom = 134.0

[node name="Sprite2D" type="Sprite2D" parent="ButtonBanana"]
texture_filter = 1
position = Vector2(19.9999, 21)
scale = Vector2(2.575, 2.5)
texture = ExtResource("8_4oqgf")
hframes = 38
vframes = 6
frame = 7

[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="pressed" from="ButtonApple" to="Ball" method="_on_button_apple_pressed"]
[connection signal="pressed" from="ButtonGreenApple" to="Ball" method="_on_button_green_apple_pressed"]
[connection signal="pressed" from="ButtonBanana" to="Ball" method="_on_button_banana_pressed"]
